fix: tags, docker-compose.yml
